Fixed some CSS spacing on the TR pics, also fixed an issue appearing on Chrome Linux. |30|

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,8 +99,8 @@ body {
 		#photogrid {
 		}
 			.trpic {
-				height: 220px;
 				width: 130px;
+				vertical-align: top;
 				display: inline-block;
 				overflow: auto;
 				margin: 10px;
